--- a/FumiEngine.vcxproj
+++ b/FumiEngine.vcxproj
@@ -97,8 +97,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ColliderTag.cpp" />
-    <ClCompile Include="CollisionChecker.cpp" />
+    <ClCompile Include="Application\Collision\ColliderTag.cpp" />
+    <ClCompile Include="Application\Collision\CollisionChecker.cpp" />
     <ClCompile Include="Engine\Collision\CollisionManager3D.cpp" />
     <ClCompile Include="Engine\Scene\BaseScene.cpp" />
     <ClCompile Include="Engine\Util\DeltaTime.cpp" />
@@ -134,7 +134,7 @@
     <ClCompile Include="Engine\3d\Line3D.cpp" />
     <ClCompile Include="Engine\Base\Instancing3D.cpp" />
     <ClCompile Include="Engine\Scene\IScene.cpp" />
-    <ClCompile Include="ICollider.cpp" />
+    <ClCompile Include="Application\Collision\ICollider.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Engine\3d\Mesh.cpp" />
     <ClCompile Include="Engine\3d\Material.cpp" />
@@ -150,14 +150,14 @@
     <ClCompile Include="Application\Scene\TransitionScene.cpp" />
     <ClCompile Include="Engine\Util\Timer.cpp" />
     <ClCompile Include="Engine\Scene\SceneManager.cpp" />
-    <ClCompile Include="M_CircleCollider.cpp" />
-    <ClCompile Include="M_ColliderManager.cpp" />
-    <ClCompile Include="M_RectCollider.cpp" />
+    <ClCompile Include="Application\Collision\M_CircleCollider.cpp" />
+    <ClCompile Include="Application\Collision\M_ColliderManager.cpp" />
+    <ClCompile Include="Application\Collision\M_RectCollider.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ColliderShape.h" />
-    <ClInclude Include="ColliderTag.h" />
-    <ClInclude Include="CollisionChecker.h" />
+    <ClInclude Include="Application\Collision\ColliderShape.h" />
+    <ClInclude Include="Application\Collision\ColliderTag.h" />
+    <ClInclude Include="Application\Collision\CollisionChecker.h" />
     <ClInclude Include="Engine\Collision\CollisionManager3D.h" />
     <ClInclude Include="Engine\Scene\BaseScene.h" />
     <ClInclude Include="Engine\Util\BasicTask.h" />
@@ -217,10 +217,10 @@
     <ClInclude Include="Engine\Util\Timer.h" />
     <ClInclude Include="Engine\Scene\SceneManager.h" />
     <ClInclude Include="Engine\Scene\IScene.h" />
-    <ClInclude Include="ICollider.h" />
-    <ClInclude Include="M_CircleCollider.h" />
-    <ClInclude Include="M_ColliderManager.h" />
-    <ClInclude Include="M_RectCollider.h" />
+    <ClInclude Include="Application\Collision\ICollider.h" />
+    <ClInclude Include="Application\Collision\M_CircleCollider.h" />
+    <ClInclude Include="Application\Collision\M_ColliderManager.h" />
+    <ClInclude Include="Application\Collision\M_RectCollider.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\Bloom.hlsli" />
