とりあえずパーティクルを正常に描画できるところまでできた

--- a/imgui.ini
+++ b/imgui.ini
@@ -49,7 +49,12 @@ Size=240,48
 Collapsed=0
 
 [Window][TimeManager]
-Pos=956,105
-Size=251,105
+Pos=1064,84
+Size=251,136
+Collapsed=0
+
+[Window][Particle]
+Pos=1314,109
+Size=511,667
 Collapsed=0
 
