--- a/FumiEngine.vcxproj.filters
+++ b/FumiEngine.vcxproj.filters
@@ -273,6 +273,15 @@
     <ClCompile Include="Engine\Util\TimeManager.cpp">
       <Filter>Engine\ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\2d\ParticleManager2D.cpp">
+      <Filter>Engine\ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\2d\ParticleEmitter2D.cpp">
+      <Filter>Engine\ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\Scene\TestScene.cpp">
+      <Filter>Engine\ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Base\WinAPI.h">
@@ -449,6 +458,15 @@
     <ClInclude Include="Engine\Util\TimeManager.h">
       <Filter>Engine\ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Engine\2d\ParticleManager2D.h">
+      <Filter>Engine\ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\2d\ParticleEmitter2D.h">
+      <Filter>Engine\ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\Scene\TestScene.h">
+      <Filter>Engine\ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\Object3D.hlsli">
@@ -479,6 +497,7 @@
       <Filter>Engine\シェーダーファイル</Filter>
     </None>
     <None Include="Resources\Shaders\Instancing3D.hlsli" />
+    <None Include="Resources\Shaders\Particle2D.hlsli" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Resources\Shaders\Object3DPS.hlsl">
@@ -540,5 +559,8 @@
     </FxCompile>
     <FxCompile Include="Resources\Shaders\Instancing3DVS.hlsl" />
     <FxCompile Include="Resources\Shaders\Instancing3DPS.hlsl" />
+    <FxCompile Include="Resources\Shaders\Particle2DGS.hlsl" />
+    <FxCompile Include="Resources\Shaders\Particle2DVS.hlsl" />
+    <FxCompile Include="Resources\Shaders\Particle2DPS.hlsl" />
   </ItemGroup>
 </Project>
