例外スローする原因の解消とかデバッグ用に上下左右移動できるようにして、処理順とかもちょい変更。

--- a/imgui.ini
+++ b/imgui.ini
@@ -49,7 +49,7 @@ Size=240,48
 Collapsed=0
 
 [Window][TimeManager]
-Pos=1211,80
+Pos=1081,93
 Size=251,136
 Collapsed=0
 
@@ -66,5 +66,10 @@ Collapsed=0
 [Window][エネミー]
 Pos=1652,563
 Size=181,176
+Collapsed=0
+
+[Window][player]
+Pos=60,60
+Size=255,258
 Collapsed=0
 
