--- a/FumiEngine.vcxproj
+++ b/FumiEngine.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerBehaviorFactory.cpp" />
     <ClCompile Include="PlayerBehaviorMachine.cpp" />
+    <ClCompile Include="PlayerBehavior_Attack.cpp" />
     <ClCompile Include="PlayerBehavior_Idle.cpp" />
     <ClCompile Include="PlayerBehavior_Jump.cpp" />
     <ClCompile Include="PlayerBehavior_Move.cpp" />
@@ -251,6 +252,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerBehaviorFactory.h" />
     <ClInclude Include="PlayerBehaviorMachine.h" />
+    <ClInclude Include="PlayerBehavior_Attack.h" />
     <ClInclude Include="PlayerBehavior_Idle.h" />
     <ClInclude Include="PlayerBehavior_Jump.h" />
     <ClInclude Include="PlayerBehavior_Move.h" />
