Vec2*Vec2を追加、タイトルシーンに一旦必要なテクスチャを読み込み、デバッグ機能でスプライトごとに座標などの値を設定できるようにした。まだタイトルは作れていない

--- a/imgui.ini
+++ b/imgui.ini
@@ -64,8 +64,8 @@ Size=152,64
 Collapsed=0
 
 [Window][エネミー]
-Pos=1555,480
-Size=227,190
+Pos=1309,487
+Size=412,190
 Collapsed=0
 
 [Window][player]
@@ -76,5 +76,10 @@ Collapsed=0
 [Window][behaviorLog]
 Pos=60,318
 Size=189,691
+Collapsed=0
+
+[Window][タイトルスプライト]
+Pos=1341,271
+Size=521,502
 Collapsed=0
 
