--- a/FumiEngine.vcxproj.filters
+++ b/FumiEngine.vcxproj.filters
@@ -357,6 +357,9 @@
     <ClCompile Include="Application\Player\Behavior\PlayerBehaviorMachine.cpp">
       <Filter>Application\Player\Behavior</Filter>
     </ClCompile>
+    <ClCompile Include="Application\Easing\AppEasing.cpp">
+      <Filter>Engine\ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Base\WinAPI.h">
@@ -613,6 +616,9 @@
     </ClInclude>
     <ClInclude Include="Application\Player\Behavior\PlayerBehaviorFactory.h">
       <Filter>Application\Player\Behavior</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\Easing\AppEasing.h">
+      <Filter>Engine\ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
