--- a/FumiEngine.vcxproj
+++ b/FumiEngine.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="Application\Player\Behavior\PlayerBehavior_Move.cpp" />
     <ClCompile Include="Application\Player\PlayerCommonInfomation.cpp" />
     <ClCompile Include="Application\Enemy\Boss\SubBoss.cpp" />
+    <ClCompile Include="Move.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\Collision\ColliderShape.h" />
@@ -259,6 +260,7 @@
     <ClInclude Include="Application\Player\Behavior\PlayerBehavior_Move.h" />
     <ClInclude Include="Application\Player\PlayerCommonInfomation.h" />
     <ClInclude Include="Application\Enemy\Boss\SubBoss.h" />
+    <ClInclude Include="Move.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\Bloom.hlsli" />
