--- a/FumiEngine.vcxproj.filters
+++ b/FumiEngine.vcxproj.filters
@@ -357,6 +357,9 @@
     <ClCompile Include="Application\Player\Behavior\PlayerBehaviorMachine.cpp">
       <Filter>Application\Player\Behavior</Filter>
     </ClCompile>
+    <ClCompile Include="Move.cpp">
+      <Filter>Engine\ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Base\WinAPI.h">
@@ -615,6 +618,9 @@
       <Filter>Application\Player\Behavior</Filter>
     </ClInclude>
     <ClInclude Include="Direction.h">
+      <Filter>Engine\ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Move.h">
       <Filter>Engine\ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
